--- a/settings/settings.json
+++ b/settings/settings.json
@@ -98,9 +98,37 @@
               "OrthoWidth": 5.12
             },
             {
+              "ImageType": 3,
+              "Width": 1024,
+              "Height":576,
+              "FOV_Degrees": 90,
+              "AutoExposureSpeed": 100,
+              "AutoExposureBias": 0,
+              "AutoExposureMaxBrightness": 0.64,
+              "AutoExposureMinBrightness": 0.03,
+              "MotionBlurAmount": 0,
+              "TargetGamma": 1,
+              "ProjectionMode": "",
+              "OrthoWidth": 20
+            },
+            {
               "ImageType": 5,
-              "Width": 512,
-              "Height":288,
+              "Width": 1024,
+              "Height":576,
+              "FOV_Degrees": 90,
+              "AutoExposureSpeed": 100,
+              "AutoExposureBias": 0,
+              "AutoExposureMaxBrightness": 0.64,
+              "AutoExposureMinBrightness": 0.03,
+              "MotionBlurAmount": 0,
+              "TargetGamma": 1,
+              "ProjectionMode": "",
+              "OrthoWidth": 5.12
+            },
+            {
+              "ImageType": 7,
+              "Width": 1024,
+              "Height":576,
               "FOV_Degrees": 90,
               "AutoExposureSpeed": 100,
               "AutoExposureBias": 0,
@@ -877,8 +905,8 @@
     "SubWindows": [
       {
         "WindowID": 0,
-        "CameraName": "below-0",
-        "ImageType": 0,
+        "CameraName": "front-0",
+        "ImageType": 7,
         "VehicleName": "0",
         "Visible": true
       },
